--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
     <!-- Start of Testimonial Section-->
     <section class="container">
       <div class="testimonials">
-        <img src="/images/bg-quotes.png" alt="icon quotes" class="testimonial-images" />
+        <img
+          src="/images/bg-quotes.png"
+          alt="icon quotes"
+          class="testimonial-images"
+        />
         <div class="testimonial-card">
           <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
@@ -238,79 +242,80 @@
     <!-- Start of Footer Section-->
     <footer>
       <div class="container">
-        <div class="footer-section">
-          <img src="/images/logo.svg" alt="logo" class="logo" />
-          <div>
-            <img
-              src="/images/icon-location.svg"
-              alt="location"
-              class="location-image"
-            />
-            <p class="footer-body">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua
-            </p>
-          </div>
-        </div>
-
-        <div class="footer-section">
-          <div class="flex">
-            <img
-              src="/images/icon-phone.svg"
-              alt="phone"
-              class="footer-phone-logo"
-            />
-            <p>
-              +1-543-123-4567
-            </p>
+        <img src="/images/logo.svg" alt="logo" class="logo" />
+        <div class="flex">
+          <div class="footer-section">
+            <div class="flex"> 
+              <img
+                src="/images/icon-location.svg"
+                alt="location"
+                class="location-image"
+              />
+              <p class="footer-body">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua
+              </p>
+            </div>
           </div>
 
-          <div class="flex">
-            <img
-              src="/images/icon-email.svg"
-              alt="email"
-              class="footer-email-logo"
-            />
-            <p>
-              example@fylo.com
-            </p>
+          <div class="footer-section">
+            <div class="flex">
+              <img
+                src="/images/icon-phone.svg"
+                alt="phone"
+                class="footer-phone-logo"
+              />
+              <p>
+                +1-543-123-4567
+              </p>
+            </div>
+
+            <div class="flex">
+              <img
+                src="/images/icon-email.svg"
+                alt="email"
+                class="footer-email-logo"
+              />
+              <p>
+                example@fylo.com
+              </p>
+            </div>
+          </div>
+
+          <div class="footer-section">
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-section">
+            <ul>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Privacy</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-section ">
+            <ul class="social-icons">
+              <li>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </li>
+            </ul>
           </div>
         </div>
-
-        <div class="footer-section">
-          <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Blog</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <ul>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
-          </ul>
-        </div>
-      </div>
+      </div> <!-- /container -->
     </footer>
 
-    <div class="footer-section">
-      <ul>
-        <li>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-        </li>
-      </ul>
-    </div>
-
-    <!-- container -->
     <!-- End of Footer Section-->
   </body>
 </html>
